# TcmAiAgent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run.sh
.cursor/: AGENTS.md
.cursor/skills/tcm-diagnosis/: SKILL.md
app/: main.py  tcm_agent.py  wechat.py
